# prisma-client-py

./: .coveragerc  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  codecov.yml  demo_bug.py  dev-requirements.txt  docker-compose.yml  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.py  sonar-project.properties  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.scratchpad/: client_name.py
benchmarks/: noxfile.py  requirements.txt  test_generation.py
databases/: .example.env  README.md  _compat.py  _serve.py  _types.py  constants.py  docker-compose.yml  main.py  partials.py  pytest.ini  requirements.txt  utils.py
docs/: README.md  advanced.md  command-line.md  config.md  index.md  install.md  limitations.md  logging.md  mypy.md  partial-types.md  quickstart.md  setup.md  type-safety.md
examples/: README.md
examples/raw-queries/: main.py  pyproject.toml  schema.prisma
grammars/: schema.lark  schema_scan.lark
htmlcov/: d_008d62399e2fcc76___init___py.html  d_008d62399e2fcc76_test_assumptions_py.html  d_008d62399e2fcc76_test_attributes_py.html  d_008d62399e2fcc76_test_generator_py.html  d_008d62399e2fcc76_test_models_py.html  d_008d62399e2fcc76_test_partial_types_py.html  d_008d62399e2fcc76_test_prisma_cleanup_py.html  d_008d62399e2fcc76_test_schema_dsl_parser_py.html  d_008d62399e2fcc76_test_utils_py.html  d_008d62399e2fcc76_test_validation_py.html  d_008d62399e2fcc76_utils_py.html  d_033c44a0efcf70b8___init___py.html  d_033c44a0efcf70b8_test_bigint_py.html  d_033c44a0efcf70b8_test_bool_py.html  d_033c44a0efcf70b8_test_bytes_py.html  d_033c44a0efcf70b8_test_compat_py.html  d_033c44a0efcf70b8_test_datetime_py.html  d_033c44a0efcf70b8_test_decimal_py.html  d_033c44a0efcf70b8_test_float_py.html  d_033c44a0efcf70b8_test_int_py.html  d_033c44a0efcf70b8_test_json_py.html  d_033c44a0efcf70b8_test_string_py.html  d_07aac4d6a5c81c5b___init___py.html  d_07aac4d6a5c81c5b_dev_py.html  d_07aac4d6a5c81c5b_fetch_py.html  d_07aac4d6a5c81c5b_generate_py.html  d_07aac4d6a5c81c5b_version_py.html  d_0d9e68163f63c118___init___py.html  d_0d9e68163f63c118_conftest_py.html  d_0d9e68163f63c118_test_batch_py.html  d_0d9e68163f63c118_test_case_sensitivity_py.html  d_0d9e68163f63c118_test_count_py.html  d_0d9e68163f63c118_test_create_many_py.html  d_0d9e68163f63c118_test_create_many_skip_duplicates_py.html  d_0d9e68163f63c118_test_create_py.html  d_0d9e68163f63c118_test_delete_many_py.html  d_0d9e68163f63c118_test_delete_py.html  d_0d9e68163f63c118_test_enum_py.html  d_0d9e68163f63c118_test_errors_py.html  d_0d9e68163f63c118_test_find_first_or_raise_py.html  (+275 more)
lib/: README.md  compat.py
pipelines/: coverage.nox.py  databases.nox.py  generator.py  integrations.nox.py  lark.nox.py  lint.nox.py  test.nox.py  typesafety.nox.py  typesaftey.nox.py
prisma/: __init__.py  __main__.py  _aiohttp_http.py  _requests_http.py  _types.py  builder.py  cli.py  errors.py  http.py  http_abstract.py  jsonrpc.py  mypy.py  plugins.py  (+1 more)
src/query-engine/: Cargo.toml  README.md  _prisma_query_engine.pyi  install.py  pyproject.toml
src/query-engine/src/: engine.rs  error.rs  lib.rs  logger.rs  py_api.rs
src/query-engine/src/logger/: channel.rs  registry.rs  telemetry.rs  visitor.rs
(+787 files in other folders)
