[tool.poetry]
name = "prisma-examples-raw-queries"
version = "0.1.0"
description = ""
authors = ["kfields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
prisma = {path = "../../",  develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
